# myengine

./: .gitignore  CMakeLists.txt  Readme.md  build_and_run.sh  imgui.ini  restartgit.sh
src/: main.cpp  shader.frag  shader.vert  shader_colored.frag  shader_colored.vert
src/Core/: Application.cpp  Application.h  InputManager.cpp  InputManager.h
src/Graphics/: Camera.cpp  Camera.h  Shader.cpp  Shader.h
src/Model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
src/Scene/: GameObject.cpp  GameObject.h  IScene.h  Scene.cpp  Scene.h  SceneNivel1.cpp  SceneNivel1.h  SceneNivel2.cpp  SceneNivel2.h
src/UI/: Console.cpp  Console.h  UIManager.cpp  UIManager.h
